# language_study

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
io/: CMakeLists.txt
io/include/io/: VerbMetadata.h
io/src/: VerbMetadataReader.cpp  VerbMetadataWriter.cpp
model/: CMakeLists.txt
model/include/model/: VerbConjModel.h
